😈Maraya-MD Public😈
😈Maraya-MD Public😈

--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Atlas-MD",
+  "name": "😈Maraya-MD Public😈",
   "description": "The future of WhatsApp bots now with plugin support.",
   "keywords": [
     "bot",
