--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/FantoX001/Atlas-MD.git"
+    "url": "git+https://github.com/DileepaTech/Maraya_MD.git"
   },
   "keywords": [
     "bot",
@@ -22,9 +22,9 @@
   "author": "Fanto001",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/FantoX001/Atlas-MD/issues"
+    "url": "https://github.com/DileepaTech/Maraya_MD/issues"
   },
-  "homepage": "https://github.com/FantoX001/Atlas-MD#readme",
+  "homepage": "https://github.com/DileepaTech/Maraya_MD#readme",
   "dependencies": {
     "baileys": "^6.0.9",
     "@adiwajshing/keyed-db": "^0.2.4",
